# flash-experts

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup_env.sh
data/mtg/: __init__.py  collector.py  processor.py
data/utils/: __init__.py  data_utils.py
examples/: combined_moe_flash.py  finetune_moe_flash.py  finetune_mtg_names.py  generate_mtg_names.py  generate_names.py  prepare_mtg_data.py
src/: __init__.py
src/flash_attention/: __init__.py  flash_attn.py  gpt2_flash_attn.py
src/flash_experts/: __init__.py
src/flash_experts/models/: __init__.py  moe_config.py  moe_layer.py
src/flash_experts/training/: __init__.py  training_config.py
src/moe/: __init__.py  gpt2_moe.py
src/training/: config.py  train.py
tests/: test_data_loading.py  test_flash_attention.py  test_moe.py  test_training.py
training/: README.md  config.py  data_utils.py  train.py
